<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/add_address_title"
        android:textColor="#111111"
        android:textSize="20dp"></TextView>
    <EditText
        android:id="@+id/edtStreet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button"
        android:inputType="text"
        android:hint = "@string/street" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_weight="1.3"
            android:id="@+id/edtCity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button"
            android:layout_below="@+id/textView1"
            android:ems="10"
            android:inputType="text"
            android:hint = "@string/city"/>
        <EditText
            android:layout_weight="2"
            android:id="@+id/edtState"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button"
            android:layout_below="@+id/textView1"
            android:ems="10"
            android:inputType="text"
            android:hint = "@string/state"/>

    </LinearLayout>
    <TextView
        android:id="@+id/tvMonthlyRent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text = "Monthly Rent"
        android:textColor="#111111"
        android:textSize="20dp"></TextView>
    <EditText
        android:id="@+id/edtWhatIPay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button"
        android:inputType="number"
        android:hint = "@string/pay"
        />
    <TextView
        android:id="@+id/tvLandlord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text = "@string/lanlord"
        android:textColor="#111111"
        android:textSize="20dp"></TextView>
    <EditText
        android:id="@+id/edtCompany"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button"
        android:inputType="text"
        android:hint = "@string/company"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_weight="1"
            android:id="@+id/btnMoveIn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/move_in"
            android:textAllCaps="false"/>
        <TextView
            android:id="@+id/tvTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_alignParentTop="true"
            android:text = "@string/to"
            android:textColor="#111111"
            android:textSize="20dp"></TextView>
        <Button
            android:layout_weight="1"
            android:id="@+id/btnMoveOut"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/move_out"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>